<resources>

    <string name="app_name">RateUrFriends</string>
    <string name="shared_preference_file">PrefFile</string>
    <string name="mean_star_format">%.1f</string>
    <string name="star_number_format">★%d</string>

    <string name="title_hall">Fame</string>
    <string name="title_feed">Feed</string>
    <string name="title_profile">Profile</string>
    <string name="title_market_place">Market</string>
    <string name="title_search">Contacts</string>

    <string name="privacy_policy_url">https://www.rateurfriends.com/privacy</string>
    <string name="term_and_condition_url">https://www.rateurfriends.com/terms-and-conditions</string>


    <!--Login Activity-->

    <string name="unknown_error">There has been an unknown error</string>
    <string name="network_error">The action could not be processed. Please check your network</string>
    <string name="first_time_login">first_time_login</string>
    <string name="information_collected">information_collected</string>

    <!--Login Activity-->


    <!--Information Collection -->

    <string name="information_not_saved">There has been an error. The information could not be saved</string>
    <string name="info_collection_username_hint">Enter your Name</string>
    <string name="info_collection_next_button">Next</string>

    <string name="initial_category_honest">Honest</string>
    <string name="initial_category_loyal">Loyal</string>
    <string name="initial_category_smart">Smart</string>
    <string name="initial_category_attractive">Attractive</string>
    <string name="initial_category_authentic">Authentic</string>
    <string name="initial_category_generous">Generous</string>
    <string name="initial_category_kind">Kind</string>

    <string name="info_collection_could_not_update_user">The User could not be updated</string>

    <!--Information Collection -->


    <!--Invite Friends Activity-->

    <string name="first_invite">first_invite</string>
    <string name="invite_friends_spare_qualities">Spare Qualities: %d</string>
    <string name="invite_friends_explanation">Invite your friends and get additional qualities</string>
    <string name="invite_friends_sms_warning">The invitations with be sent by SMS. Additional charge may apply.</string>
    <string name="invite_friends_understood_button">Understood</string>
    <string name="invite_friends_next_button">Next</string>

    <string name="invite_friends_first_invite_message">
         "Hey, I started to use this fun new app RateUrFriends! Join me there\n\nAndroid: https://rateurfriends.com/android"
    </string>

    <string name="invite_friends_second_invite_message">
         "Just a reminder, I started to use RateUrFriends! Join me there\n\nAndroid: https://rateurfriends.com/android"
    </string>

    <string name="invite_friends_no_contacts">You don\'t have any contacts in your phone</string>

    <!--Invite Friends Activity-->

    <!--Main Activity-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_invite_friends">Invite your Friends</string>
    <string name="navigation_drawer_signout">Sign Out</string>


    <!--Main Activity-->

    <!--Profile Fragment-->

    <string name="profile_title">Profile</string>
    <string name="profile_spare_stars_text_view">Spare Stars: %d</string>
    <string name="profile_spare_categories_text_view">Spare Qualities: %d</string>
    <string name="profile_level_text_view">Level %d</string>
    <string name="profile_add_quality_button">Add Quality</string>
    <string name="profile_search_quality_hint">Create or Search a Quality</string>
    <string name="profile_take_picture_button">Picture</string>
    <string name="profile_upload_picture_button">Upload</string>
    <string name="no_camera_use">You will not be able to take your picture</string>
    <string name="no_upload_use">You will not be able to upload a picture</string>
    <string name="profile_category_public">Public</string>
    <string name="chooser_select_an_image">"Select an image"</string>

    <string name="profile_could_not_update_category">The Quality could not be updated</string>
    <string name="profile_known_quality">You already have this quality</string>
    <string name="profile_could_not_insert_quality">The Quality could be inserted</string>
    <string name="profile_no_quality">You don\'t have any qualities yet</string>

    <!--Profile Fragment-->


    <!--Search Fragment-->

    <string name="search_title">Your Contacts</string>
    <string name="search_could_not_get_contacts">Could not get the Contacts</string>
    <string name="search_no_contacts">You don\'t have any contacts yet</string>

    <!--Search Fragment-->


    <!--Market Place Fragment-->

    <string name="market_place_title">Market Place</string>
    <string name="market_place_spare_stars_text_view">Spare Stars: %d</string>
    <string name="market_place_spare_categories_text_view">Spare Qualities: %d</string>
    <string name="market_place_could_not_update_stars">The Stars could not be added</string>
    <string name="market_place_could_not_update_categories">The Qualities could not be added</string>

    <!--Market Place Fragment-->


    <!--Feed Fragment-->

    <string name="feed_title">Feed</string>
    <string name="feed_switch_on">Friends Only</string>
    <string name="feed_switch_off">All</string>

    <string name="feed_level_passed">Level Passed!</string>
    <string name="feed_more_stars">More Stars!</string>
    <string name="feed_one_more_quality">One More Quality!</string>

    <string name="feed_level_passed_message">
        <![CDATA[
     Congratulate <b>%s</b> for reaching Level <b>%d</b>. This level requires <b>%d</b> stars.
        ]]>
    </string>

    <string name="feed_more_stars_message">
        <![CDATA[
     A user rated you <b>%d</b> stars on the <b>%s</b> quality.
        ]]>
    </string>

    <string name="feed_one_more_quality_message">
        <![CDATA[
     <b>%s</b> added the <b>%s</b> quality. You can rate this quality now.
        ]]>
    </string>

    <string name="feed_could_not_get_feeds">The Feeds could be accessed</string>

    <string name="feed_no_feeds">You don\'t have any feed yet</string>


    <!--Feed Fragment-->


    <!--Hall of Fame fragment-->

    <string name="hall_of_fame_title">Hall of Fame</string>
    <string name="hall_of_fame_all_users_text_view">All users</string>
    <string name="hall_of_fame_filter_button">Filter</string>
    <string name="hall_of_fame_search_hint">Search a Quality</string>
    <string name="hall_of_fame_switch_local_text">Show for</string>
    <string name="hall_of_fame_switch_local_text_on">Local Only</string>
    <string name="hall_of_fame_switch_local_text_off">All</string>
    <string name="hall_of_fame_switch_average_text">Order By</string>
    <string name="hall_of_fame_switch_average_text_on">Star Count</string>
    <string name="hall_of_fame_switch_average_text_off">Average</string>
    <string name="hall_of_fame_switch_direction_text">Direction</string>
    <string name="hall_of_fame_switch_direction_text_on">High to Low</string>
    <string name="hall_of_fame_switch_direction_text_off">Low to High</string>
    <string name="hall_of_fame_switch_category_text">Filter</string>
    <string name="hall_of_fame_switch_category_text_on">By category</string>
    <string name="hall_of_fame_switch_category_text_off">Overall</string>
    <string name="hall_of_fame_submit_button">submit</string>

    <string name="hall_of_fame_could_not_get_data">The data could not be accessed</string>
    <string name="hall_of_fame_problem_finding_qualities">We are having a problem finding the Qualities</string>

    <!--Hall of Fame fragment-->

    <!--Contact Profile Activity-->

    <string name="contact_profile_level_text_view">Level %d</string>
    <string name="contact_profile_your_vote">Your vote: %s</string>

    <string name="contact_profile_could_not_update_category">The Quality could not be updated</string>
    <string name="contact_profile_could_not_get_qualities">The Qualities could not be accessed</string>
    <string name="contact_profile_could_not_update_vote">The Vote could not be updated</string>

    <string name="contact_profile_no_quality">Your contact has no public qualities</string>


    <!--Contact Profile Activity-->


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1282663951893271</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1282663951893271</string>


</resources>


