<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".fragments.ProfileFragment">    <androidx.core.widget.NestedScrollView        android:id="@+id/scroll_view"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:fillViewport="true"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:background="@color/white"            android:paddingBottom="56dp"            android:gravity="center_horizontal">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:background="@drawable/profile_background"                android:gravity="center"                android:layout_marginBottom="10dp"                android:orientation="vertical">                <RelativeLayout                    android:layout_width="wrap_content"                    android:layout_height="wrap_content">                    <androidx.cardview.widget.CardView                        android:id="@+id/card_view"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        app:cardCornerRadius="78dp"                        android:gravity="center"                        app:cardElevation="0dp">                        <androidx.cardview.widget.CardView                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_margin="3dp"                            app:cardCornerRadius="75dp"                            android:gravity="center"                            app:cardElevation="0dp">                            <ImageView                                android:id="@+id/iv_profile_picture"                                android:layout_width="150dp"                                android:layout_height="150dp"                                app:layout_constraintBottom_toBottomOf="parent"                                app:layout_constraintLeft_toLeftOf="parent"                                app:layout_constraintRight_toRightOf="parent"                                app:layout_constraintTop_toTopOf="parent"                                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />                        </androidx.cardview.widget.CardView>                    </androidx.cardview.widget.CardView>                    <com.google.android.material.button.MaterialButton                        android:id="@+id/bt_photo_menu"                        android:layout_alignTop="@+id/card_view"                        android:layout_alignEnd="@+id/card_view"                        android:layout_width="40dp"                        android:layout_height="50dp"                        app:cornerRadius="30dp"                        android:paddingStart="20dp"                        app:icon="@drawable/ic_photo_camera_black_24dp"                        app:iconGravity="textStart"/>                </RelativeLayout>                <TextView                    android:id="@+id/tv_profile_name"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:textColor="@color/colorPrimaryDark"                    android:textSize="32sp" />                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:gravity="center"                    android:orientation="horizontal">                    <com.rateurfriends.rateurfriends.customViews.LevelView                        android:id="@+id/level_view"                        android:layout_width="100dp"                        android:layout_height="wrap_content" />                    <TextView                        android:id="@+id/tv_level"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_marginStart="10dp"                        android:textColor="@color/colorPrimaryText"                        android:textSize="20sp" />                </LinearLayout>                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:gravity="center"                    android:orientation="horizontal">                    <RatingBar                        android:id="@+id/star_rating"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:isIndicator="true"                        android:scaleX="0.8"                        android:scaleY="0.8"                        android:numStars="5"                        android:stepSize="0.25"                        android:theme="@style/RatingBar" />                    <TextView                        android:id="@+id/tv_mean_star"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_marginStart="10dp"                        android:textColor="@color/colorPrimaryText"                        android:textSize="20sp" />                </LinearLayout>                <TextView                    android:id="@+id/tv_start_number"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:textColor="@color/colorPrimaryText"                    android:textSize="20sp" />                <TextView                    android:id="@+id/tv_spare_stars"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/colorPrimaryText"                    android:gravity="center" />                <TextView                    android:id="@+id/tv_spare_categories"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColor="@color/colorPrimaryText"                    android:gravity="center" />            </LinearLayout>            <com.google.android.material.button.MaterialButton                android:id="@+id/bt_add_category"                android:layout_width="180dp"                android:layout_height="50dp"                app:cornerRadius="30dp"                app:icon="@drawable/ic_add_circle_outline_black_24dp"                android:text="@string/profile_add_quality_button"                app:iconGravity="start"/>            <LinearLayout                android:id="@+id/ll_add_category"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:visibility="gone"                android:orientation="vertical">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_marginLeft="20dp"                    android:layout_marginRight="20dp"                    android:layout_marginTop="10dp"                    android:layout_height="wrap_content"                    android:weightSum="3"                    android:orientation="horizontal">                    <EditText                        android:id="@+id/ed_category_name"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:inputType="textCapSentences"                        android:hint="@string/profile_search_quality_hint"                        android:layout_weight="0.8" />                    <com.google.android.material.button.MaterialButton                        android:id="@+id/bt_submit_category"                        android:layout_width="match_parent"                        android:layout_height="50dp"                        android:layout_marginRight="10dp"                        android:layout_marginLeft="10dp"                        android:layout_weight="2.2"                        app:cornerRadius="20dp"                        app:icon="@drawable/ic_check_circle_green_24dp"                        app:iconGravity="textStart" />                </LinearLayout>                <androidx.recyclerview.widget.RecyclerView                    android:id="@+id/rv_category_search"                    android:layout_marginLeft="20dp"                    android:layout_marginRight="20dp"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:nestedScrollingEnabled="true"/>            </LinearLayout>            <View                android:id="@+id/divider"                android:layout_width="match_parent"                android:layout_height="1dp"                android:background="?android:attr/listDivider" />            <androidx.recyclerview.widget.RecyclerView                android:id="@+id/rvCategories"                android:layout_width="match_parent"                android:nestedScrollingEnabled="false"                android:layout_marginLeft="20dp"                android:layout_marginRight="20dp"                android:layout_height="wrap_content"/>        </LinearLayout>    </androidx.core.widget.NestedScrollView>    <FrameLayout        android:layout_width="match_parent"        android:background="@color/transparent_dark"        android:id="@+id/layout_edit_picture"        android:visibility="gone"        android:clickable="true"        android:focusable="true"        android:layout_height="match_parent">        <androidx.cardview.widget.CardView            android:id="@+id/cv_picture"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            app:cardBackgroundColor="@color/white"            android:layout_gravity="center"            app:cardCornerRadius="30dp"            app:cardElevation="5dp">            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="10dp"                android:layout_alignParentStart="true"                android:layout_alignParentTop="true"                android:gravity="center"                android:orientation="horizontal"                android:baselineAligned="false">                <com.google.android.material.button.MaterialButton                    android:id="@+id/bt_take_picture"                    android:layout_width="wrap_content"                    android:layout_height="50dp"                    android:layout_marginRight="10dp"                    android:layout_marginLeft="10dp"                    app:cornerRadius="20dp"                    app:icon="@drawable/ic_photo_camera_black_24dp"                    app:iconGravity="textStart"                    android:text="@string/profile_take_picture_button" />                <com.google.android.material.button.MaterialButton                    android:id="@+id/bt_upload_picture"                    android:layout_width="wrap_content"                    android:layout_marginLeft="10dp"                    android:layout_marginRight="10dp"                    android:layout_height="50dp"                    app:cornerRadius="20dp"                    app:icon="@drawable/ic_file_upload_black_24dp"                    app:iconGravity="textStart"                    android:text="@string/profile_upload_picture_button" />            </LinearLayout>        </androidx.cardview.widget.CardView>    </FrameLayout>    <FrameLayout        android:id="@+id/progress_layout"        android:layout_gravity="center"        android:visibility="gone"        android:clickable="true"        android:focusable="true"        android:layout_width="match_parent"        android:layout_height="match_parent">        <ProgressBar            android:layout_gravity="center"            android:id="@+id/progressBar1"            style="?android:attr/progressBarStyleLarge"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>    </FrameLayout></androidx.constraintlayout.widget.ConstraintLayout>